--- a/liposomal-iron.html
+++ b/liposomal-iron.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LEDIPROVIZOR — Молочко для рук с ламинарией </title>
+    <title>LEDIPROVIZOR — Липосомальное железо</title>
     <meta
       name="description"
-      content="Молочко для рук с ламинарией: 24/7 hydration with cellular laminaria juice and oils. Usage, benefits, price, and Wildberries link."
+      content="Липосомальное железо: 90% absorption, raises hemoglobin and ferritin without constipation. Ingredients, benefits, price, and Wildberries link."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -38,21 +38,21 @@
         </nav>
 
         <div class="header-cta">
-          <a class="btn btn-primary" href="products.html#hand-milk">Вернуться в продукты</a>
+          <a class="btn btn-primary" href="products.html#iron">Вернутья в продукты</a>
         </div>
       </div>
     </header>
 
     <main id="main">
-      <section class="section" aria-label="Молочко для рук с ламинарией details">
+      <section class="section" aria-label="Липосомальное железо detail">
         <div class="container founder-grid">
           <div class="founder-photo">
             <div class="frame">
               <div class="frame-inner">
                 <div class="media" style="aspect-ratio: 4 / 5;">
                   <img
-                    alt="Молочко для рук с ламинарией"
-                    src="milk.jpg"
+                    alt="Липосомальное железо product photo placeholder"
+                    src="iron.jpg"
                   />
                 </div>
               </div>
@@ -61,30 +61,45 @@
 
           <div class="founder-copy">
             <div class="section-head">
-              <h1>Молочко для рук с ламинарией</h1>
-              <p class="muted">24/7 hydration • heals cracks • protects against cold</p>
+              <h1>Липосомальное железо</h1>
+             
             </div>
 
             <p class="body-text">
-              Увлажнение 24/7 с клеточным соком ламинарии и маслами. Для сухой/трескучей кожи, особенно зимой в горах 
-              Хватает на 72 часа и никакой липкости вначале - это бомба! 
+              Липосомальная форма для 90% усвояемости. Поднимает гемоглобин и самое важное Ферритин без запоров. 
+              Дозировка: 1 капс/день. Для женщин, спортсменов, веганов. 
             </p>
 
-            <div class="philosophy" id="usage">
-              <h3>How to use</h3>
+            <div class="philosophy" id="ingredients">
+              <h3>Состав</h3>
               <ul class="checklist">
-                <li>Apply a small amount to clean, dry hands.</li>
-                <li>Massage gently until fully absorbed, focusing on dry areas.</li>
-                <li>Use throughout the day whenever your hands need a soft reset.</li>
+                <li>Липосомальное железо бисглицинат</li>
+                <li>Липосомальный витамин C</li>
+                <li>Липосомальный В12</li>
+                <li>B9</li>
+              </ul>
+            </div>
+
+            <div class="philosophy" id="benefits">
+              <h3>Польза</h3>
+              <ul class="checklist">
+                <li>+ Энергия</li>
+                <li>- Усталость</li>
+                <li>Поддержка щитовидки</li>
               </ul>
             </div>
 
             <div class="product-row" style="margin-top: 18px;">
-              <span class="price">₽1 690</span>
+              <span class="price">₽3 692</span>
               <div class="product-actions">
                 <a class="btn btn-small btn-primary" href="https://www.wildberries.ru/seller/250045490" target="_blank" rel="noreferrer">Купить на Wildberries</a>
-                <a class="btn btn-small btn-ghost" href="products.html#hand-milk">Назад</a>
+                <a class="btn btn-small btn-ghost" href="products.html#iron">Назад</a>
               </div>
+            </div>
+
+            <div class="quote" style="margin-top: 18px;">
+              <p class="quote-text">“Iron without side effects — the routine you can actually keep.”</p>
+              <p class="quote-author">— pharmacist-led formulation note</p>
             </div>
           </div>
         </div>
