--- a/vitamin-iron.html
+++ b/vitamin-iron.html
@@ -1,105 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Liposomal Iron — Amina</title>
+    <title>LEDIPROVIZOR — Redirect</title>
+    <meta http-equiv="refresh" content="0; url=liposomal-iron.html" />
     <meta
       name="description"
-      content="Detailed information about Amina's Liposomal Iron: gentle daily support with a modern format."
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@500;600;700&display=swap"
-      rel="stylesheet"
+      content="This page moved to liposomal-iron.html."
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a class="skip-link" href="#main">Skip to content</a>
-
-    <header class="site-header" id="top">
-      <div class="container header-inner">
-        <a class="brand" href="index.html" aria-label="Go to homepage">
-          <span class="brand-mark" aria-hidden="true"></span>
-          <span class="brand-text">
-            <span class="brand-name">Amina</span>
-            <span class="brand-sub">Vitamins &amp; Cosmetics</span>
-          </span>
-        </a>
-
-        <nav class="nav" aria-label="Primary">
-          <a href="index.html">Home</a>
-          <a href="vitamins.html" class="active">Vitamins</a>
-          <a href="cosmetics.html">Cosmetics</a>
-          <a href="about.html">About</a>
-        </nav>
-
-        <div class="header-cta">
-          <a class="btn btn-primary" href="vitamins.html">Back to vitamins</a>
-        </div>
-      </div>
-    </header>
-
     <main id="main">
-      <section class="section" aria-label="Liposomal Iron details">
-        <div class="container founder-grid">
-          <div class="founder-photo">
-            <img
-              class="portrait"
-              alt="Liposomal Iron product photo"
-              src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='1100' viewBox='0 0 900 1100'><defs><linearGradient id='gi' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23ffffff'/><stop offset='1' stop-color='%23e7f3ef'/></linearGradient></defs><rect width='900' height='1100' rx='60' fill='url(%23gi)'/><circle cx='640' cy='340' r='160' fill='%23ffd9c8' opacity='0.55'/><circle cx='600' cy='440' r='120' fill='%23bfe3da' opacity='0.45'/><rect x='180' y='260' width='320' height='460' rx='56' fill='%23ffffff' opacity='0.98'/><text x='225' y='390' font-family='Inter, Arial' font-size='30' fill='%231d2a2a'>Liposomal</text><text x='225' y='450' font-family='Inter, Arial' font-size='64' font-weight='700' fill='%231d2a2a'>Iron</text><rect x='225' y='490' width='230' height='16' rx='8' fill='%23f3efe8'/><rect x='225' y='520' width='190' height='16' rx='8' fill='%23f3efe8'/><rect x='225' y='550' width='210' height='16' rx='8' fill='%23f3efe8'/></svg>"
-            />
+      <section class="section hero" aria-label="Redirect">
+        <div class="container">
+          <div class="section-head">
+            <h1>Moved</h1>
+            <p class="muted">This page has moved to the new premium product detail page.</p>
           </div>
-
-          <div class="founder-copy">
-            <div class="section-head">
-              <h1>Liposomal Iron</h1>
-              <p class="muted">Gentle daily iron support in a modern, comfortable format.</p>
-            </div>
-
-            <p class="body-text">
-              Amina’s Liposomal Iron was created for women who want steady support without harsh
-              sensations. The liposomal format is designed to feel softer on the stomach, while
-              keeping your routine simple and elegant.
-            </p>
-
-            <div class="philosophy">
-              <h3>Benefits</h3>
-              <ul class="checklist">
-                <li>Gentle, liposomal format made for everyday comfort.</li>
-                <li>Thoughtful dose for consistent, long-term routines.</li>
-                <li>Pairs beautifully with a light, modern wellness lifestyle.</li>
-              </ul>
-            </div>
-
-            <div class="product-row" style="margin-top: 18px;">
-              <span class="price">$24.90</span>
-              <div class="product-actions">
-                <button class="btn btn-small btn-primary" type="button">Buy</button>
-                <a class="btn btn-small btn-ghost" href="vitamins.html">Back to vitamins</a>
-              </div>
-            </div>
+          <div class="hero-actions">
+            <a class="btn btn-primary" href="liposomal-iron.html">Go to Liposomal Iron</a>
+            <a class="btn btn-ghost" href="products.html#iron">Back to products</a>
           </div>
         </div>
       </section>
     </main>
-
-    <footer class="site-footer" aria-label="Footer">
-      <div class="container footer-inner">
-        <div>
-          <p class="footer-brand">Amina — Vitamins &amp; Cosmetics</p>
-          <p class="muted small">Light, modern wellness for everyday routines.</p>
-        </div>
-        <div class="footer-links" aria-label="Footer links">
-          <a href="index.html">Home</a>
-          <a href="vitamins.html" class="active">Vitamins</a>
-          <a href="cosmetics.html">Cosmetics</a>
-          <a href="about.html">About</a>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
 
