--- a/vitamins.html
+++ b/vitamins.html
@@ -1,129 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vitamins — Amina</title>
+    <title>LEDIPROVIZOR — Redirect</title>
+    <meta http-equiv="refresh" content="0; url=products.html#iron" />
     <meta
       name="description"
-      content="Vitamins by Amina: Liposomal Iron and Vitamin D3K2 in a light, modern format."
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@500;600;700&display=swap"
-      rel="stylesheet"
+      content="This page moved to products.html."
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a class="skip-link" href="#main">Skip to content</a>
-
-    <header class="site-header" id="top">
-      <div class="container header-inner">
-        <a class="brand" href="index.html" aria-label="Go to homepage">
-          <span class="brand-mark" aria-hidden="true"></span>
-          <span class="brand-text">
-            <span class="brand-name">Amina</span>
-            <span class="brand-sub">Vitamins &amp; Cosmetics</span>
-          </span>
-        </a>
-
-        <nav class="nav" aria-label="Primary">
-          <a href="index.html">Home</a>
-          <a href="vitamins.html" class="active">Vitamins</a>
-          <a href="cosmetics.html">Cosmetics</a>
-          <a href="about.html">About</a>
-        </nav>
-
-        <div class="header-cta">
-          <a class="btn btn-primary" href="vitamins.html">Shop Vitamins</a>
-        </div>
-      </div>
-    </header>
-
     <main id="main">
-      <section class="section hero" aria-label="Vitamins overview">
+      <section class="section hero" aria-label="Redirect">
         <div class="container">
           <div class="section-head">
-            <h1>Vitamins</h1>
-            <p class="muted">
-              Gentle, modern formulas designed for everyday confidence and ease.
-            </p>
+            <h1>Moved</h1>
+            <p class="muted">This page has moved to the new premium Products page.</p>
           </div>
-          <p class="body-text">
-            Discover two focused essentials from Amina: a soft liposomal iron for daily support,
-            and a balanced D3K2 duo for bones and immunity. Light design, clear benefits, and calm
-            routines.
-          </p>
-        </div>
-      </section>
-
-      <section class="section" aria-label="Vitamin products">
-        <div class="container">
-          <div class="product-grid">
-            <article class="product-card">
-              <div class="product-media">
-                <img
-                  alt="Liposomal Iron product photo"
-                  src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='650' viewBox='0 0 900 650'><defs><linearGradient id='g5b' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23ffffff'/><stop offset='1' stop-color='%23e7f3ef'/></linearGradient></defs><rect width='900' height='650' rx='44' fill='url(%23g5b)'/><rect x='190' y='160' width='310' height='360' rx='44' fill='%23ffffff' opacity='0.98'/><text x='240' y='285' font-family='Inter, Arial' font-size='24' fill='%231d2a2a'>Liposomal</text><text x='240' y='345' font-family='Inter, Arial' font-size='54' font-weight='700' fill='%231d2a2a'>Iron</text><rect x='240' y='382' width='230' height='14' rx='7' fill='%23f3efe8'/><rect x='240' y='407' width='180' height='14' rx='7' fill='%23f3efe8'/><circle cx='700' cy='250' r='140' fill='%23ffd9c8' opacity='0.55'/><circle cx='650' cy='335' r='90' fill='%23bfe3da' opacity='0.55'/></svg>"
-                />
-              </div>
-              <div class="product-body">
-                <h2 class="product-title">Liposomal Iron</h2>
-                <p class="product-desc">
-                  Gentle iron support with a modern liposomal format—made to feel soft in daily use.
-                </p>
-                <div class="product-row">
-                  <span class="price">$24.90</span>
-                  <div class="product-actions">
-                    <a class="btn btn-small btn-ghost" href="vitamin-iron.html">View details</a>
-                    <button class="btn btn-small btn-primary" type="button">Buy</button>
-                  </div>
-                </div>
-              </div>
-            </article>
-
-            <article class="product-card">
-              <div class="product-media">
-                <img
-                  alt="Vitamin D3K2 product photo"
-                  src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='650' viewBox='0 0 900 650'><defs><linearGradient id='g6b' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23fff6ef'/><stop offset='1' stop-color='%23eaf6f2'/></linearGradient></defs><rect width='900' height='650' rx='44' fill='url(%23g6b)'/><rect x='190' y='160' width='310' height='360' rx='44' fill='%23ffffff' opacity='0.98'/><text x='240' y='285' font-family='Inter, Arial' font-size='24' fill='%231d2a2a'>Vitamin</text><text x='240' y='345' font-family='Inter, Arial' font-size='54' font-weight='700' fill='%231d2a2a'>D3K2</text><rect x='240' y='382' width='230' height='14' rx='7' fill='%23f3efe8'/><rect x='240' y='407' width='180' height='14' rx='7' fill='%23f3efe8'/><circle cx='700' cy='260' r='150' fill='%23ffd9c8' opacity='0.45'/></svg>"
-                />
-              </div>
-              <div class="product-body">
-                <h2 class="product-title">Vitamin D3K2</h2>
-                <p class="product-desc">
-                  A classic D3K2 pair to support bones and immunity—simple, clear, and routine‑friendly.
-                </p>
-                <div class="product-row">
-                  <span class="price">$19.90</span>
-                  <div class="product-actions">
-                    <a class="btn btn-small btn-ghost" href="vitamin-d3k2.html">View details</a>
-                    <button class="btn btn-small btn-primary" type="button">Buy</button>
-                  </div>
-                </div>
-              </div>
-            </article>
+          <div class="hero-actions">
+            <a class="btn btn-primary" href="products.html#iron">Go to Products</a>
+            <a class="btn btn-ghost" href="index.html">Home</a>
           </div>
         </div>
       </section>
     </main>
-
-    <footer class="site-footer" aria-label="Footer">
-      <div class="container footer-inner">
-        <div>
-          <p class="footer-brand">Amina — Vitamins &amp; Cosmetics</p>
-          <p class="muted small">Light, modern wellness for everyday routines.</p>
-        </div>
-        <div class="footer-links" aria-label="Footer links">
-          <a href="index.html">Home</a>
-          <a href="vitamins.html" class="active">Vitamins</a>
-          <a href="cosmetics.html">Cosmetics</a>
-          <a href="about.html">About</a>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
 
