--- a/vitamin-d3k2.html
+++ b/vitamin-d3k2.html
@@ -1,105 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vitamin D3K2 — Amina</title>
+    <title>LEDIPROVIZOR — Redirect</title>
+    <meta http-equiv="refresh" content="0; url=products.html" />
     <meta
       name="description"
-      content="Detailed information about Amina's Vitamin D3K2: balanced support for bones and immunity."
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@500;600;700&display=swap"
-      rel="stylesheet"
+      content="This page moved to products.html (teaser)."
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a class="skip-link" href="#main">Skip to content</a>
-
-    <header class="site-header" id="top">
-      <div class="container header-inner">
-        <a class="brand" href="index.html" aria-label="Go to homepage">
-          <span class="brand-mark" aria-hidden="true"></span>
-          <span class="brand-text">
-            <span class="brand-name">Amina</span>
-            <span class="brand-sub">Vitamins &amp; Cosmetics</span>
-          </span>
-        </a>
-
-        <nav class="nav" aria-label="Primary">
-          <a href="index.html">Home</a>
-          <a href="vitamins.html" class="active">Vitamins</a>
-          <a href="cosmetics.html">Cosmetics</a>
-          <a href="about.html">About</a>
-        </nav>
-
-        <div class="header-cta">
-          <a class="btn btn-primary" href="vitamins.html">Back to vitamins</a>
-        </div>
-      </div>
-    </header>
-
     <main id="main">
-      <section class="section" aria-label="Vitamin D3K2 details">
-        <div class="container founder-grid">
-          <div class="founder-photo">
-            <img
-              class="portrait"
-              alt="Vitamin D3K2 product photo"
-              src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='1100' viewBox='0 0 900 1100'><defs><linearGradient id='gd' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23fff6ef'/><stop offset='1' stop-color='%23eaf6f2'/></linearGradient></defs><rect width='900' height='1100' rx='60' fill='url(%23gd)'/><circle cx='210' cy='290' r='150' fill='%23ffd9c8' opacity='0.55'/><rect x='300' y='260' width='320' height='460' rx='56' fill='%23ffffff' opacity='0.98'/><text x='345' y='390' font-family='Inter, Arial' font-size='30' fill='%231d2a2a'>Vitamin</text><text x='345' y='450' font-family='Inter, Arial' font-size='64' font-weight='700' fill='%231d2a2a'>D3K2</text><rect x='345' y='490' width='230' height='16' rx='8' fill='%23f3efe8'/><rect x='345' y='520' width='190' height='16' rx='8' fill='%23f3efe8'/></svg>"
-            />
+      <section class="section hero" aria-label="Redirect">
+        <div class="container">
+          <div class="section-head">
+            <h1>Moved</h1>
+            <p class="muted">Vitamin D is now a “Coming soon” teaser on the Products page.</p>
           </div>
-
-          <div class="founder-copy">
-            <div class="section-head">
-              <h1>Vitamin D3K2</h1>
-              <p class="muted">Balanced everyday support for bones, mood, and immunity.</p>
-            </div>
-
-            <p class="body-text">
-              Vitamin D3K2 brings together two key nutrients in one simple routine. Amina’s D3K2 is
-              designed for clarity and consistency—no clutter, just a clean formula that fits
-              smoothly into your day.
-            </p>
-
-            <div class="philosophy">
-              <h3>Benefits</h3>
-              <ul class="checklist">
-                <li>Supports bone health and calcium balance.</li>
-                <li>Helps maintain a resilient immune system.</li>
-                <li>Pairs easily with a calm, minimal wellness routine.</li>
-              </ul>
-            </div>
-
-            <div class="product-row" style="margin-top: 18px;">
-              <span class="price">$19.90</span>
-              <div class="product-actions">
-                <button class="btn btn-small btn-primary" type="button">Buy</button>
-                <a class="btn btn-small btn-ghost" href="vitamins.html">Back to vitamins</a>
-              </div>
-            </div>
+          <div class="hero-actions">
+            <a class="btn btn-primary" href="products.html">Go to Products</a>
+            <a class="btn btn-ghost" href="index.html">Home</a>
           </div>
         </div>
       </section>
     </main>
-
-    <footer class="site-footer" aria-label="Footer">
-      <div class="container footer-inner">
-        <div>
-          <p class="footer-brand">Amina — Vitamins &amp; Cosmetics</p>
-          <p class="muted small">Light, modern wellness for everyday routines.</p>
-        </div>
-        <div class="footer-links" aria-label="Footer links">
-          <a href="index.html">Home</a>
-          <a href="vitamins.html" class="active">Vitamins</a>
-          <a href="cosmetics.html">Cosmetics</a>
-          <a href="about.html">About</a>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
 
